--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build": "webpack --config webpack.cordova.config.js",
-    "start": "webpack-dev-server"
+    "build": "webpack --config webpack.pwa.config.js",
+    "start": "webpack-dev-server",
+    "serve": "node server.js"
   },
   "dependencies": {
     "@types/jest": "^20.0.4",
@@ -25,7 +26,7 @@
     "localforage": "^1.5.0",
     "material-ui": "^0.18.7",
     "normalizr": "^3.2.3",
-    "offline-plugin": "^4.8.1",
+    "offline-plugin": "^4.8.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.3",
     "enzyme": "^2.8.2",
+    "express": "^4.15.3",
     "jest": "^20.0.4",
     "ts-jest": "^20.0.7",
     "typescript": "^2.3.4",
