--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^7.0.31",
     "@types/react-test-renderer": "^15.5.2",
     "babel-polyfill": "^6.23.0",
+    "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.16",
     "d3": "^4.9.1",
     "eslint": "^4.0.0",
@@ -41,6 +42,7 @@
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "webpack-bundle-analyzer": "^2.8.3",
     "webpack-path-rewriter": "^1.1.4"
   },
   "devDependencies": {
