--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "string-replace-webpack-plugin": "^0.1.3",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-path-rewriter": "^1.1.4"
   },
