--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "react-test-renderer": "^15.6.1",
-    "redux": "^3.6.0",
+    "redux": "^3.7.2",
     "redux-mock-store": "^1.2.3",
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
@@ -47,12 +47,13 @@
     "webpack-path-rewriter": "^1.1.4"
   },
   "devDependencies": {
+    "@types/react-redux": "^4.4.47",
     "awesome-typescript-loader": "^3.1.3",
     "enzyme": "^2.8.2",
     "express": "^4.15.3",
     "jest": "^20.0.4",
     "ts-jest": "^20.0.7",
-    "typescript": "^2.3.4",
+    "typescript": "^2.4.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.5"
