--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^4.0.8",
+    "react-swipeable-views": "^0.12.5",
     "react-tap-event-plugin": "^2.0.1",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
