--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
+    "local-t2-assessment-suite": "^0.0.43",
+    "local-t2-linear-gage": "^0.0.5",
     "localforage": "^1.5.0",
     "material-ui": "^0.18.7",
     "normalizr": "^3.2.3",
