--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
-    "local-t2-assessment-suite": "^0.0.43",
+    "local-t2-assessment-suite": "^0.1.6",
     "local-t2-linear-gage": "^0.0.5",
     "localforage": "^1.5.0",
     "material-ui": "^0.18.7",
@@ -52,9 +52,12 @@
   "devDependencies": {
     "@types/react-redux": "^4.4.47",
     "awesome-typescript-loader": "^3.1.3",
+    "csv": "^1.1.1",
+    "csv-parse": "^1.2.1",
     "enzyme": "^2.8.2",
     "express": "^4.15.3",
     "jest": "^20.0.4",
+    "sanitize-filename": "^1.6.1",
     "ts-jest": "^20.0.7",
     "typescript": "^2.4.2",
     "url-loader": "^0.5.9",
@@ -77,5 +80,6 @@
     "testMatch": [
       "**/__tests__/*.(ts|tsx|js)"
     ]
-  }
+  },
+  "peerDependencies": {}
 }
