--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "serve": "node server.js"
   },
   "dependencies": {
-    "@types/jest": "^20.0.4",
-    "@types/material-ui": "^0.17.11",
-    "@types/node": "^7.0.31",
-    "@types/react-test-renderer": "^15.5.2",
+    "@types/jest": "^21.1.2",
+    "@types/node": "^8.0.34",
+    "@types/react": "^16.0.10",
+    "@types/react-tap-event-plugin": "^0.0.30",
     "babel-polyfill": "^6.23.0",
     "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.16",
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^2.28.0",
     "localforage": "^1.5.0",
     "material-ui": "^0.19.4",
+    "material-ui-next": "npm:material-ui@next",
     "normalizr": "^3.2.3",
     "offline-plugin": "^4.8.3",
     "react": "^16.0.0",
@@ -48,7 +49,6 @@
     "webpack-path-rewriter": "^1.1.4"
   },
   "devDependencies": {
-    "@types/react-redux": "^4.4.47",
     "awesome-typescript-loader": "^3.1.3",
     "enzyme": "^2.8.2",
     "express": "^4.15.3",
