--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^2.28.0",
     "localforage": "^1.5.0",
     "material-ui": "^0.19.4",
+    "material-ui-icons": "^1.0.0-beta.15",
     "material-ui-next": "npm:material-ui@next",
     "normalizr": "^3.2.3",
     "offline-plugin": "^4.8.3",
